fix gap in footer width because of the padding body change color of darkTheme change menu in mobile to slide to right add sub header for profile add profile to menu mobile add bg and less shadow to profile section finish profile setting frontend

--- a/Django-React/frontend/static/css/base/_globals.scss
+++ b/Django-React/frontend/static/css/base/_globals.scss
@@ -34,7 +34,6 @@ html {
     direction: rtl;
 
     // background: linear-gradient(90deg, #000000, #0a0101, #260101);
-    background: #121212;
     background-attachment: fixed;
 }
 
@@ -47,25 +46,22 @@ html {
 body {
     margin: 0;
     padding: 0;
-    // font-family: IRANYekanRegular;
     position: relative;
     max-width: 100%;
     overflow-x: hidden;
     overflow-y: overlay;
     scroll-behavior: smooth;
     scrollbar-color: #b52633 transparent;
+    background: #060101;
 
-    &::before {
-        content: "";
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        background: #121212;
-        backdrop-filter: blur(.2rem);
-        z-index: -1;
-    }
+    // &::before {
+    //     content: "";
+    //     position: fixed;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100vw;
+    //     height: 100vh;
+    // }
 
     &::-webkit-scrollbar {
         width: .625rem;
@@ -108,6 +104,12 @@ button {
     }
 }
 
+h2 {
+    @include breakpoints-down(large) {
+        font-size: .8rem !important;
+    }
+}
+
 h3 {
     font-family: IRANYekanBlack, sans-serif, serif !important;
     font-size: .8rem !important;
@@ -122,6 +124,11 @@ h4 {
     }
 }
 
+input, textarea {
+    background: $second;
+    border-bottom: 1px solid #707070;
+}
+
 p, input {
     font-family: IRANYekanRegular, sans-serif, serif !important;
     text-align: right;
@@ -130,11 +137,21 @@ p, input {
 
 dt {
     font-family: IRANYekanBold, sans-serif, serif !important;
-    margin-bottom: 1.125rem;
 }
 
 dd {
     font-family: IRANYekanRegular, sans-serif, serif !important;
+}
+
+figcaption {
+    font-family: IRANYekanRegular, sans-serif, serif !important;
+    font-size: .7rem;
+    color: darkGray;
+    margin-top: .5rem;
+}
+
+select {
+    text-align: left;    
 }
 
 a,
@@ -161,6 +178,8 @@ li {
 hr {
     border: 1px solid #8080802e;
     width: 50%;
+    margin-top: 1.125rem !important;
+    margin-bottom: 1.125rem !important;
 }
 
 // .int {
