--- a/Django-React/frontend/static/css/base/_variables.scss
+++ b/Django-React/frontend/static/css/base/_variables.scss
@@ -44,6 +44,7 @@ $red: #af282f;
 $darkRed: #690D11;
 $white: #f0f0f0;
 $black: #161616;
+$second: #1d1313;
 $gray: #707070;
 
 // Gradient Colors
