--- a/Django-React/frontend/static/css/components/_header.scss
+++ b/Django-React/frontend/static/css/components/_header.scss
@@ -56,7 +56,7 @@
     }
 
     .slideMenu-hide {
-        top: -27rem !important;
+        right: -100vw !important;
     }
 
     &__menu {
